# wispkey

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml  promote.yml  release.yml
plugin/: mcp.json
plugin/.cursor-plugin/: plugin.json
plugin/agents/: wispkey-advisor.md
plugin/commands/: setup-wispkey.md
plugin/hooks/: hooks.json
plugin/rules/: proxy-routing.mdc  secret-safety.mdc
plugin/scripts/: env-leak-guard.sh  secret-guard.sh
plugin/skills/cloud-sync/: SKILL.md
plugin/skills/credential-management/: SKILL.md
plugin/skills/env-migration/: SKILL.md
plugin/skills/partition-management/: SKILL.md
plugin/skills/proxy-setup/: SKILL.md
src/: main.rs
src/audit/: mod.rs
src/cli/: mod.rs
src/cloud/: mod.rs
src/core/: mod.rs
src/mcp/: mod.rs
src/migrate/: mod.rs
src/partition/: mod.rs
src/policy/: mod.rs
src/proxy/: mod.rs
tests/: integration.rs
